Updated to remove internal references.

--- a/code/train-test-validation/index.html
+++ b/code/train-test-validation/index.html
@@ -17,7 +17,7 @@
       <nav>
         <span
           class="cardSpan"
-          onclick="location.href='https://mla.corp.amazon.com/explain/';"
+          onclick="location.href='https://aws.amazon.com/machine-learning/';"
         >
           <span class="icon">
             <object data="robot.svg" type="image/svg+xml"></object>
@@ -65,10 +65,10 @@
 
         <p>
           By
-          <a href="https://phonetool.amazon.com/users/wilberjw">Jared Wilber</a>
+          Jared Wilber
           &
-          <a href="https://phonetool.amazon.com/users/bwernes">Brent Werness</a
-          >.<br /><br /><br /><br />
+          Brent Werness
+          .<br /><br /><br /><br />
           In most supervised machine learning tasks, best practice recommends to
           split your data into three independent sets: a
           <span id="annotation1"><b>training set</b></span
@@ -122,14 +122,10 @@
         <section data-index="0" class="intro" id="intro">
           <h2>The Importance of Data Splitting <br /></h2>
           <p>
-            By
-            <a href="https://phonetool.amazon.com/users/wilberjw"
-              >Jared Wilber</a
-            >
+            By Jared Wilber
             &
-            <a href="https://phonetool.amazon.com/users/bwernes"
-              >Brent Werness</a
-            >.<br /><br /><br /><br />
+            Brent Werness
+            .<br /><br /><br /><br />
             In most supervised machine learning tasks, best practice recommends
             to split your data into three independent sets: a
             <span id="annotation1-intro"><b>training set</b></span
@@ -390,7 +386,7 @@
             <span class="center">🐾</span>
             <br /><br />
             Thanks for reading! To learn more about machine learning, check out
-            <a href="https://aws.amazon.com/machine-learning/mlu/"
+            <a href="https://aws.amazon.com/machine-learning/"
               >our website</a
             >, watch
             <a href="https://www.youtube.com/channel/UC12LqyqTQYbXatYS9AA7Nuw"
